--- a/A4/A4.ipynb
+++ b/A4/A4.ipynb
@@ -90,62 +90,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Clump_thickness  Uniformity_of_cell_size  Uniformity_of_cell_shape  \\\n",
-      "0                  5                        1                         1   \n",
-      "1                  5                        4                         4   \n",
-      "2                  3                        1                         1   \n",
-      "3                  6                        8                         8   \n",
-      "4                  4                        1                         1   \n",
-      "..               ...                      ...                       ...   \n",
-      "694                3                        1                         1   \n",
-      "695                2                        1                         1   \n",
-      "696                5                       10                        10   \n",
-      "697                4                        8                         6   \n",
-      "698                4                        8                         8   \n",
-      "\n",
-      "     Marginal_adhesion  Single_epithelial_cell_size  Bland_chromatin  \\\n",
-      "0                    1                            2                3   \n",
-      "1                    5                            7                3   \n",
-      "2                    1                            2                3   \n",
-      "3                    1                            3                3   \n",
-      "4                    3                            2                3   \n",
-      "..                 ...                          ...              ...   \n",
-      "694                  1                            3                1   \n",
-      "695                  1                            2                1   \n",
-      "696                  3                            7                8   \n",
-      "697                  4                            3               10   \n",
-      "698                  5                            4               10   \n",
-      "\n",
-      "     Normal_nucleoli  Mitoses  \n",
-      "0                  1        1  \n",
-      "1                  2        1  \n",
-      "2                  1        1  \n",
-      "3                  7        1  \n",
-      "4                  1        1  \n",
-      "..               ...      ...  \n",
-      "694                1        1  \n",
-      "695                1        1  \n",
-      "696               10        2  \n",
-      "697                6        1  \n",
-      "698                4        1  \n",
-      "\n",
-      "[699 rows x 8 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(breast_cancer_X)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -164,7 +108,7 @@
     "        bias_list=torch.Tensor([0]+[-self.cut_points[i] for i in range(len(self.cut_points))])\n",
     "        for i in range(1, len(bias_list)):\n",
     "            bias_list[i]+=bias_list[i-1]\n",
-    "        self.b = torch.nn.Parameter(bias_list)\n",
+    "        self.b = torch.nn.Parameter(bias_list) #[0, -beta1, -beta1-beta2...]\n",
     "\n",
     "        self.tau=tau #Temperature parameter for the first softmax layer.\n",
     "        self.softmax=torch.nn.Softmax() #Classifier softmax layer.\n",
@@ -192,6 +136,7 @@
     "        self.num_classes=max(self.Y[self.Y.columns[0]])+1 #C\n",
     "        self.sample=range(self.num_features) #All features to pick, is all of them if we're not sampling.\n",
     "\n",
+    "        #Randomly sample features if we're high-dimensional.\n",
     "        if feature_sample:\n",
     "            self.sample=self.create_sample(num_samples)\n",
     "            self.num_features=num_samples\n",
@@ -390,23 +335,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[3.677363395690918, 4.452359199523926, 4.692783355712891, 9.400978088378906], [1.2710179090499878, 3.1218186616897583, 5.569969177246094, 7.445176124572754], [2.8984899520874023, 4.878206253051758, 5.944275856018066, 8.195417404174805], [1.6645419597625732, 3.2810685634613037, 5.244372844696045, 5.272605895996094], [1.0573906898498535, 2.7732996940612793, 3.357722282409668, 7.493094444274902], [1.5125540494918823, 4.654284119606018, 5.887313365936279, 6.382287979125977], [5.189550399780273, 7.031750679016113, 8.312600135803223, 8.930227279663086], [1.9893999099731445, 4.895139694213867, 6.742480278015137, 8.97376823425293]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(cut_points)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
@@ -475,23 +403,6 @@
     "plt.xlabel(\"Num Epochs\")\n",
     "plt.ylabel(\"Accuracy\")\n",
     "plt.title(\"Accuracy vs Num Epochs for Random Forest Selecting 10 Features\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.8366666666666667, 0.8414285714285714, 0.8185714285714286, 0.8257142857142857, 0.8066666666666666]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(accuracies)"
    ]
   }
  ],
